@@ -60,6 +60,12 @@
             <groupId>com.syd</groupId>
             <artifactId>algo</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.syd</groupId>
+            <artifactId>java21</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -72,7 +78,6 @@
                     <compilerArgs>
                         <compilerArg>--enable-preview</compilerArg>
                         <arg>--add-modules=jdk.incubator.vector</arg>
-                        <arg>--add-modules=jdk.incubator.concurrent</arg>
                         <arg>--add-exports=java.base/jdk.internal.vm=ALL-UNNAMED</arg>
                     </compilerArgs>
                 </configuration>
